--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,9 @@ header nav .dropdown-item {
 .container.dark-overlay{
   border: 2px solid #000000;
 }
+.container.dark-overlay:hover{
+  border: 1px solid white;
+}
 
 .card.dark-overlay:hover img{
   opacity: 1;
