--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ header nav .dropdown-item {
   color: white !important;
 }
 
+.btn > div{
+  bottom: 0px;
+  left:15px;
+  border-radius: 0px;
+}
+
 
 .dark-overlay {
   border-radius: 5px;
@@ -128,12 +134,19 @@ header nav .dropdown-item {
   transition: 0.5s;
 }
 
-.btn.btn-outline-info:hover{
+.btn.btn-outline-info:hover, .showcertif:hover{
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid #5bc0de;
   box-shadow: 0px 0px 30px 0px white;
   text-shadow: 0 0 15px #27e1fa;
   animation: glow 1s ease-in-out infinite alternate;
+}
+
+.modal-content{
+  background-color: transparent;
+}
+.modal-xl-2 {
+  max-width: 1000px !important;
 }
 
 footer {
@@ -155,7 +168,7 @@ footer {
   }
 }
 
-img {
+.pdp {
   max-height: 300px;
 }
 
@@ -344,3 +357,63 @@ ul.timeline>li:before {
 /* End particles js */
 
 /* Start particles js */
+
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
